# rust-engine

./: .gitignore  Cargo.toml
engine_tester/: Cargo.toml
engine_tester/resources/: quad.frag  quad.vert  rect.frag  rect.vert
engine_tester/src/: main.rs
src/: lib.rs
src/core/: base.rs  key_codes.rs  logger.rs  mod.rs  mouse_codes.rs  window.rs
src/math/: aabb.rs  mod.rs
src/renderer/: buffer.rs  camera.rs  mod.rs  render_command.rs  renderer.rs  shader.rs  texture_2d.rs  vertex_array.rs
src/ui/: mod.rs  ui.rs  ui_renderer.rs
