[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
thiserror = "1.0.51"
glfw = "0.45.0"
gl = "0.14.0"
cgmath = "0.18.0"
stb_image = "0.3.0"
